--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Fan page - Nusrat Fateh Ali Khan</h1>
+    <img src="img/nusrat.jpeg" alt="">
     <ul class="accordion">
         <li>
             <button class="accord-name">Biography</button>
@@ -21,6 +22,7 @@
         </li>
 
         <li>
+            <img src="img/award.jpeg" alt="">
             <button class="accord-name">Awards</button>
             <div class="accord-list">
                 <p>Khan is widely considered to be the most important qawwal in history. In 1987, he received the President of Pakistan's Award for Pride of Performance for his contribution to Pakistani music. In 1995, he received the UNESCO Music Prize. In 1996 he was awarded Grand Prix des Amériques 
@@ -29,6 +31,7 @@
                     the "Legends" award at the UK Asian Music Awards. Khan was listed at position 91 on Rolling Stone's 200 Best Singers Of All Time list, which was published on January 1, 2023.</p></div>
         </li>
 
+        <img src="img/stage.jpeg" alt="">
         <li>
             <button class="accord-name">Tributes, Legacy and Influence</button>
             <div class="accord-list">
@@ -41,6 +44,7 @@
 
         <li>
             <button class="accord-name">Popular Culture</button>
+            <img src="img/hislife.jpeg" alt="">
             <div class="accord-list">
             <p>One of Khan's famous qawwali songs, "Tere Bin Nahin Lagda" ("I am restless without you"), appeared on two of his 1996 albums, Sorrows Vol. 69 and Sangam (as "Tere Bin Nahin Lagda Dil"), the latter a collaborative album with Indian lyricist Javed Akhtar; Sangam sold over 1 million copies in India. Composed by Nusrat Fateh Ali Khan, the Kachche 
                 Dhaage soundtrack album sold 3 million units in India. Nusrat Fateh Ali Khan's music had a big impact on Bollywood music, inspiring numerous Indian musicians working in Bollywood since the late 1980s. For example, he inspired A. R. Rahman and Javed Akhtar, both of whom he collaborated with. However, there were many hit filmi songs from other Indian 
