--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </ul>
 
     <h3>Tabbed list</h3>
-    <ul class="tab-panels"> 
+    <ul class="tab-panel"> 
         <li class="active">
             <a clas="tab-name" href="#tab1">Biography</a>
         </li>
